fixing sm screen scrollbar + labels positioning 1/3 1/2 instead explicit

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -25,7 +25,6 @@ html {
 
 @layer base {
   body {
-    padding-bottom: 5rem;
     color: var(--text-color-light);
     background-color: var(--bg-light);
   }
